objects/Daily_Scheduled_Record_Auto_Create__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Default_Values__c</fullName>
        <label>Additional Default Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_SOQL_Criteria__c</fullName>
        <label>Additional SOQL Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Values__c</fullName>
        <inlineHelpText>Enter the values ex: "Field_API_Name__c":"Value" and separate with a ','</inlineHelpText>
        <label>Default Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Relationships__c</fullName>
        <inlineHelpText>Value example API_Name_Of_Lookup_In_New_Record:API_Name_of_Parent_Id_In_SOQL__c and separated by ','</inlineHelpText>
        <label>Lookup Relationships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Push_New_Record_Data_To_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use caution when checking this check box! Talk to developer, if unsure if you should check this box or not.</inlineHelpText>
        <label>Push New Record Data To Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supported_Objects_for_Record_Auto_Create__c</fullName>
        <label>Supported Objects for Record Auto Create</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Organic_Analysis__c</fullName>
                    <label>Organic Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Daily Scheduled Record Auto Create</label>
    <listViews>
        <fullName>All_More_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>IsProtected</columns>
        <columns>Active__c</columns>
        <columns>Push_New_Record_Data_To_Marketo__c</columns>
        <columns>Supported_Objects_for_Record_Auto_Create__c</columns>
        <columns>Lookup_Relationships__c</columns>
        <filterScope>Everything</filterScope>
        <label>All More Details</label>
        <sharedTo>
            <group>Sys_Local_Admin</group>
        </sharedTo>
    </listViews>
    <pluralLabel>Daily Scheduled Record Auto Create</pluralLabel><visibility>Public</visibility>
</CustomObject>